test/valid/method-as-func.js
var o = { method: function() {  return 3; } };

o.method();
var f = o.method;
f();
